Fix issue with approving video iframe being too big
Because fuck css

--- a/app/assets/stylesheets/show_page.scss
+++ b/app/assets/stylesheets/show_page.scss
@@ -106,3 +106,7 @@
   @include shadow-level(1);
 }
 
+.approve-video .embedded-video iframe {
+  width: 100%;
+  height: 525px;
+}
